--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
         "@tailwindcss/vite": "^4.1.11",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
+        "laravel-echo": "^2.1.6",
         "laravel-vite-plugin": "^1.2.0",
+        "pusher-js": "^8.4.0",
         "tailwindcss": "^4.1.11",
         "vite": "^6.2.4"
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.14",
+        "@types/lodash": "^4.17.20",
         "@vitejs/plugin-vue": "^6.0.0",
+        "lodash": "^4.17.21",
         "pinia": "^3.0.3"
     }
 }
